<resources>
    <string name="app_name">Menu</string>
    <string name="icon_example">ícone de exemplo</string>
    <string name="required_time">45-55min</string>
    <string name="hamburguer1_title">HAMBURGUER %1$d</string>
    <string name="hamburguer1_price">R$ 20,00</string>
    <string name="hamburguer2_title">HAMBURGUER 2</string>
    <string name="hamburguer2_price">R$ 30,00</string>
    <string name="snack_name">Hamburguer Black</string>
    <string name="description">hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world</string>
    <string name="detailed_price">R$%1$.2f</string>
    <string name="detailed_name">%1$s</string>
    <string name="add_to_order">Add to Order</string>
    <string name="home">Início</string>
    <string name="orders">Pedidos</string>
    <string name="profile">Perfil</string>

</resources>