<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment android:id="@+id/nav_home"
        android:name="co.aladinjunior.menu.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment android:id="@+id/nav_orders"
        android:name="co.aladinjunior.menu.view.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders"/>

    <fragment android:id="@+id/nav_profile"
        android:name="co.aladinjunior.menu.view.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>


</navigation>